# katana

./: .dockerignore  Cargo.toml  Dev Journal.md  Dockerfile  LICENSE  README.md  journal.txt
spec/: User Stories.md
src/: common.rs  iterators.rs  journal.rs  main.rs  monthgrid.rs  reports.rs  transaction.rs  types.rs
src/iterators/: transactionsbymonth.rs
src/journal/: types.rs
src/reports/: balance.rs  register.rs
src/types/: amount.rs  monthyear.rs
