[package]
name = "katana"
version = "0.1.0"
authors = ["Jason Hooper <nirgle@gmail.com>", "OpenAI Model: GPT-4"]
description = "Simple textual reporting for double-entry accounting ledgers"
edition = "2021"

[dependencies]
console = "0.15.0"
pancurses = "0.17.0"
regex = "1.7.1"
chrono = "0.4.24"
nom = "7.1.3"
lazy_static = "1.4.0"